--- a/index.html
+++ b/index.html
@@ -4,167 +4,280 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Fotos que Vendem</title>
+<link rel="icon" href="https://cdn-icons-png.flaticon.com/512/2920/2920277.png" type="image/png">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 <style>
     body {
-        font-family: Arial, sans-serif;
+        font-family: "Poppins", Arial, sans-serif;
         margin: 0;
         padding: 0;
-        background-color: #f0fdf4; /* verde claro */
+        background-color: #f0fdf4;
         color: #111;
+        scroll-behavior: smooth;
     }
 
     header {
-        background-color: #064e3b; /* verde escuro */
+        background: linear-gradient(135deg,#16a34a,#064e3b);
         color: white;
-        padding: 50px 20px;
         text-align: center;
+        padding: 60px 20px;
+        position: relative;
+        overflow: hidden;
+    }
+
+    header img {
+        width: 90px;
+        margin-bottom: 20px;
+        filter: drop-shadow(2px 2px 5px rgba(0,0,0,0.3));
+        animation: logoFade 1s ease forwards;
     }
 
     header h1 {
-        font-size: 2.5em;
+        font-size: 3em;
         margin-bottom: 10px;
+        animation: slideDown 1s ease forwards;
     }
 
     header p {
-        font-size: 1.2em;
+        font-size: 1.3em;
+        opacity: 0.9;
+        animation: slideUp 1s ease forwards;
     }
+
+    @keyframes logoFade { from {opacity:0; transform:scale(0.5);} to {opacity:1; transform:scale(1);} }
+    @keyframes slideDown { from {opacity:0; transform:translateY(-50px);} to {opacity:1; transform:translateY(0);} }
+    @keyframes slideUp { from {opacity:0; transform:translateY(50px);} to {opacity:1; transform:translateY(0);} }
 
     .container {
         width: 90%;
         max-width: 1200px;
-        margin: 40px auto;
+        margin: 50px auto;
     }
 
     .plans {
         display: flex;
         flex-wrap: wrap;
-        gap: 20px;
+        gap: 30px;
         justify-content: center;
     }
 
     .plan {
         background-color: white;
-        border: 2px solid #064e3b;
-        border-radius: 15px;
-        padding: 30px;
+        border-radius: 25px;
+        padding: 35px 25px;
         flex: 1;
-        min-width: 250px;
-        max-width: 300px;
+        min-width: 300px;
+        max-width: 380px;
         text-align: center;
-        transition: transform 0.3s;
+        box-shadow: 0 6px 15px rgba(0,0,0,0.08);
+        transition: all 0.4s ease, box-shadow 0.4s ease, border 0.4s ease;
+        position: relative;
+        opacity: 0;
+        transform: translateY(50px);
+        border: 2px solid #064e3b;
+    }
+
+    .plan.visible {
+        opacity: 1;
+        transform: translateY(0);
     }
 
     .plan:hover {
-        transform: scale(1.05);
+        transform: translateY(-10px) scale(1.03);
+        box-shadow: 0 18px 35px rgba(0,0,0,0.2);
+        border: 2px solid #16a34a;
+        background: linear-gradient(to bottom right, #f0fdf4, #e6f7e9);
     }
 
     .plan h2 {
         color: #064e3b;
-        margin-bottom: 15px;
+        margin-bottom: 12px;
+        font-size: 1.5em;
     }
 
     .plan p {
         margin: 10px 0;
         font-size: 1em;
+        color: #333;
     }
 
     .price {
-        font-size: 1.5em;
+        font-size: 1.9em;
         font-weight: bold;
-        margin: 20px 0;
-        color: #16a34a; /* verde claro destaque */
+        margin: 25px 0;
+        color: #16a34a;
     }
 
     .btn {
         background-color: #16a34a;
         color: white;
-        padding: 15px 25px;
+        padding: 14px 28px;
         text-decoration: none;
-        border-radius: 10px;
-        font-weight: bold;
+        border-radius: 12px;
+        font-weight: 600;
         display: inline-block;
-        transition: background-color 0.3s;
+        transition: all 0.4s ease;
+        box-shadow: 0 6px 15px rgba(0,0,0,0.1);
     }
 
     .btn:hover {
         background-color: #065f46;
+        transform: translateY(-3px) scale(1.05);
+        box-shadow: 0 12px 25px rgba(0,0,0,0.3);
     }
 
-    .testimonials {
+    iframe {
+        margin-top: 20px;
+        width: 100%;
+        height: 480px;
+        border: none;
+        border-radius: 12px;
+    }
+
+    .success-message {
+        display: none;
+        background-color: #dcfce7;
+        border: 2px solid #16a34a;
+        color: #065f46;
+        padding: 15px;
+        border-radius: 10px;
+        font-weight: bold;
+        position: absolute;
+        top: 10px;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 80%;
         text-align: center;
-        margin: 60px 20px;
+        box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+        animation: fadeIn 0.5s ease-in-out;
     }
 
-    .testimonials blockquote {
-        font-style: italic;
-        margin: 20px auto;
-        max-width: 600px;
-    }
+    @keyframes fadeIn { from {opacity:0;} to {opacity:1;} }
 
     footer {
         background-color: #064e3b;
         color: white;
         text-align: center;
-        padding: 30px 20px;
+        padding: 50px 20px;
     }
 
+    footer a { color: #a7f3d0; text-decoration: underline; }
+    footer a:hover { color: #d1fae5; }
+
+    .whatsapp-float {
+        position: fixed;
+        width: 60px;
+        height: 60px;
+        bottom: 25px;
+        right: 25px;
+        background-color: #25d366;
+        color: white;
+        border-radius: 50%;
+        text-align: center;
+        font-size: 30px;
+        box-shadow: 2px 2px 12px rgba(0,0,0,0.3);
+        z-index: 100;
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .whatsapp-float:hover {
+        transform: scale(1.15);
+        box-shadow: 0 0 25px rgba(37,211,102,0.8);
+    }
+
+    .whatsapp-float i { margin-top: 15px; }
+
     @media (max-width: 768px) {
-        .plans {
-            flex-direction: column;
-            align-items: center;
-        }
+        .plans { flex-direction: column; align-items: center; }
+        iframe { height: 600px; }
+        .whatsapp-float { width: 55px; height: 55px; font-size: 26px; bottom: 20px; right: 20px; }
+        .whatsapp-float i { margin-top: 14px; }
     }
 </style>
 </head>
 <body>
 
 <header>
-    <h1>🚀 Transforme Seu Negócio com Imagens que Vendem!</h1>
-    <p>Fotos incríveis, posts estratégicos e cardápios que atraem clientes — tudo em um só lugar.</p>
+    <img src="https://cdn-icons-png.flaticon.com/512/2920/2920277.png" alt="Logo Fotos que Vendem">
+    <h1>Fotos que Vendem</h1>
+    <p>Transforme imagens comuns em poderosas ferramentas de venda.</p>
 </header>
 
 <div class="container">
-    <h2 style="text-align:center; margin-bottom:40px;">Escolha Seu Plano</h2>
+    <h2 style="text-align:center; margin-bottom:50px;">Escolha o plano ideal para o seu negócio</h2>
     <div class="plans">
+
         <div class="plan">
-            <h2>📸 Fotos que Vendem</h2>
+            <div class="success-message">✅ Formulário enviado com sucesso!</div>
+            <h2>📸 Fotos que Vendem (Base)</h2>
             <p>10 melhorias de fotos profissionais</p>
-            <p>Ideal para quem quer dar um upgrade rápido nas imagens</p>
+            <p>Perfeito para quem quer realçar produtos e serviços</p>
             <div class="price">R$ 99,99</div>
-            <a href="#" class="btn">Contratar Agora</a>
+            <a href="https://link.infinitepay.io/verruck_/VC1DLTAtUg-6bG4T8Q3ot-99,99" class="btn" target="_blank">💳 Contratar Agora</a>
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf9khrT32bBIPm53u53JIEtj3akJkVNEeumTFdo-lXF1wP3rg/viewform?embedded=true">Carregando…</iframe>
         </div>
+
         <div class="plan">
+            <div class="success-message">✅ Formulário enviado com sucesso!</div>
             <h2>📈 Fotos que Vendem Plus</h2>
             <p>10 melhorias de fotos</p>
-            <p>3 posts prontos para Instagram</p>
-            <p>Mais presença online e engajamento</p>
-            <div class="price">R$ 159,00</div>
-            <a href="#" class="btn">Contratar Agora</a>
+            <p>+ 3 posts prontos para Instagram</p>
+            <p>Mais engajamento e profissionalismo nas redes</p>
+            <div class="price">R$ 159,99</div>
+            <a href="https://link.infinitepay.io/verruck_/VC1DLTAtUg-p9l5t4GbN-159,99" class="btn" target="_blank">💳 Contratar Agora</a>
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf9khrT32bBIPm53u53JIEtj3akJkVNEeumTFdo-lXF1wP3rg/viewform?embedded=true">Carregando…</iframe>
         </div>
+
         <div class="plan">
+            <div class="success-message">✅ Formulário enviado com sucesso!</div>
             <h2>🚀 Fotos que Vendem Pro</h2>
             <p>10 melhorias de fotos</p>
-            <p>5 posts para Instagram</p>
-            <p>1 cardápio profissional para seu estabelecimento</p>
-            <p>Perfeito para impulsionar seu negócio completo</p>
-            <div class="price">R$ 219,00</div>
-            <a href="#" class="btn">Contratar Agora</a>
+            <p>5 posts personalizados</p>
+            <p>1 cardápio digital exclusivo</p>
+            <p>O pacote completo para destacar sua marca</p>
+            <div class="price">R$ 219,99</div>
+            <a href="https://link.infinitepay.io/verruck_/VC1DLTAtUg-6bG4zU3kB9-219,99" class="btn" target="_blank">💳 Contratar Agora</a>
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf9khrT32bBIPm53u53JIEtj3akJkVNEeumTFdo-lXF1wP3rg/viewform?embedded=true">Carregando…</iframe>
         </div>
-    </div>
 
-    <div class="testimonials">
-        <h2>O que nossos clientes dizem</h2>
-        <blockquote>"Com as fotos e posts da equipe, minhas vendas online aumentaram em apenas 2 semanas!" – Cliente Satisfeito</blockquote>
-        <blockquote>"O cardápio ficou lindo, moderno e fácil de ler. Recomendo demais!" – Dono de Restaurante</blockquote>
     </div>
 </div>
 
 <footer>
-    <p>Para dúvidas ou pedidos personalizados, fale conosco:</p>
-    <p>WhatsApp: <a href="https://wa.me/seunumerodetelefone" style="color:white; text-decoration:underline;">Clique aqui</a></p>
-    <p>Instagram: <a href="https://instagram.com/seuperfil" style="color:white; text-decoration:underline;">@seuperfil</a></p>
-    <p>© 2025 Fotos que Vendem</p>
+    <p>💬 Dúvidas ou pedidos personalizados? Fale conosco!</p>
+    <p>WhatsApp: <a href="https://wa.me/5554984493856?text=Olá,%20quero%20saber%20mais%20sobre%20os%20planos!" target="_blank">(54) 98449-3856</a></p>
+    <p>© 2025 Fotos que Vendem — Todos os direitos reservados.</p>
 </footer>
+
+<a href="https://wa.me/5554984493856?text=Olá,%20quero%20saber%20mais%20sobre%20os%20planos%20do%20site!" class="whatsapp-float" target="_blank">
+    <i class="fab fa-whatsapp"></i>
+</a>
+
+<script>
+    const iframes = document.querySelectorAll('iframe');
+    iframes.forEach((iframe) => {
+        iframe.addEventListener('load', () => {
+            const parent = iframe.closest('.plan');
+            const successMsg = parent.querySelector('.success-message');
+            const url = iframe.contentWindow.location.href;
+            if (url.includes('formResponse')) {
+                successMsg.style.display = 'block';
+                setTimeout(() => { successMsg.style.display = 'none'; }, 4000);
+            }
+        });
+    });
+
+    const planos = document.querySelectorAll('.plan');
+    const observer = new IntersectionObserver(entries => {
+        entries.forEach(entry => {
+            if(entry.isIntersecting){
+                entry.target.classList.add('visible');
+            }
+        });
+    }, { threshold: 0.2 });
+    planos.forEach(plan => observer.observe(plan));
+</script>
 
 </body>
 </html>
