--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         color: #16a34a;
     }
 
-    .btn {
+    .btn, .form-btn {
         background-color: #16a34a;
         color: white;
         padding: 14px 28px;
@@ -119,20 +119,13 @@
         display: inline-block;
         transition: all 0.4s ease;
         box-shadow: 0 6px 15px rgba(0,0,0,0.1);
+        margin-top: 10px;
     }
 
-    .btn:hover {
+    .btn:hover, .form-btn:hover {
         background-color: #065f46;
         transform: translateY(-3px) scale(1.05);
         box-shadow: 0 12px 25px rgba(0,0,0,0.3);
-    }
-
-    iframe {
-        margin-top: 20px;
-        width: 100%;
-        height: 480px;
-        border: none;
-        border-radius: 12px;
     }
 
     .success-message {
@@ -190,7 +183,6 @@
 
     @media (max-width: 768px) {
         .plans { flex-direction: column; align-items: center; }
-        iframe { height: 600px; }
         .whatsapp-float { width: 55px; height: 55px; font-size: 26px; bottom: 20px; right: 20px; }
         .whatsapp-float i { margin-top: 14px; }
     }
@@ -209,28 +201,25 @@
     <div class="plans">
 
         <div class="plan">
-            <div class="success-message">✅ Formulário enviado com sucesso!</div>
             <h2>📸 Fotos que Vendem (Base)</h2>
             <p>10 melhorias de fotos profissionais</p>
             <p>Perfeito para quem quer realçar produtos e serviços</p>
             <div class="price">R$ 99,99</div>
             <a href="https://link.infinitepay.io/verruck_/VC1DLTAtUg-6bG4T8Q3ot-99,99" class="btn" target="_blank">💳 Contratar Agora</a>
-            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf9khrT32bBIPm53u53JIEtj3akJkVNEeumTFdo-lXF1wP3rg/viewform?embedded=true">Carregando…</iframe>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSf9khrT32bBIPm53u53JIEtj3akJkVNEeumTFdo-lXF1wP3rg/viewform?usp=dialog" class="form-btn" target="_blank">📝 Preencha o Formulário</a>
         </div>
 
         <div class="plan">
-            <div class="success-message">✅ Formulário enviado com sucesso!</div>
             <h2>📈 Fotos que Vendem Plus</h2>
             <p>10 melhorias de fotos</p>
             <p>+ 3 posts prontos para Instagram</p>
             <p>Mais engajamento e profissionalismo nas redes</p>
             <div class="price">R$ 159,99</div>
             <a href="https://link.infinitepay.io/verruck_/VC1DLTAtUg-p9l5t4GbN-159,99" class="btn" target="_blank">💳 Contratar Agora</a>
-            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf9khrT32bBIPm53u53JIEtj3akJkVNEeumTFdo-lXF1wP3rg/viewform?embedded=true">Carregando…</iframe>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSf9khrT32bBIPm53u53JIEtj3akJkVNEeumTFdo-lXF1wP3rg/viewform?usp=dialog" class="form-btn" target="_blank">📝 Preencha o Formulário</a>
         </div>
 
         <div class="plan">
-            <div class="success-message">✅ Formulário enviado com sucesso!</div>
             <h2>🚀 Fotos que Vendem Pro</h2>
             <p>10 melhorias de fotos</p>
             <p>5 posts personalizados</p>
@@ -238,7 +227,7 @@
             <p>O pacote completo para destacar sua marca</p>
             <div class="price">R$ 219,99</div>
             <a href="https://link.infinitepay.io/verruck_/VC1DLTAtUg-6bG4zU3kB9-219,99" class="btn" target="_blank">💳 Contratar Agora</a>
-            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf9khrT32bBIPm53u53JIEtj3akJkVNEeumTFdo-lXF1wP3rg/viewform?embedded=true">Carregando…</iframe>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSf9khrT32bBIPm53u53JIEtj3akJkVNEeumTFdo-lXF1wP3rg/viewform?usp=dialog" class="form-btn" target="_blank">📝 Preencha o Formulário</a>
         </div>
 
     </div>
@@ -255,19 +244,6 @@
 </a>
 
 <script>
-    const iframes = document.querySelectorAll('iframe');
-    iframes.forEach((iframe) => {
-        iframe.addEventListener('load', () => {
-            const parent = iframe.closest('.plan');
-            const successMsg = parent.querySelector('.success-message');
-            const url = iframe.contentWindow.location.href;
-            if (url.includes('formResponse')) {
-                successMsg.style.display = 'block';
-                setTimeout(() => { successMsg.style.display = 'none'; }, 4000);
-            }
-        });
-    });
-
     const planos = document.querySelectorAll('.plan');
     const observer = new IntersectionObserver(entries => {
         entries.forEach(entry => {
