--- a/index.html
+++ b/index.html
@@ -1,254 +1,53 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Fotos que Vendem</title>
-<link rel="icon" href="https://cdn-icons-png.flaticon.com/512/2920/2920277.png" type="image/png">
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-<style>
-    body {
-        font-family: "Poppins", Arial, sans-serif;
-        margin: 0;
-        padding: 0;
-        background-color: #f0fdf4;
-        color: #111;
-        scroll-behavior: smooth;
-    }
-
-    header {
-        background: linear-gradient(135deg,#16a34a,#064e3b);
-        color: white;
-        text-align: center;
-        padding: 60px 20px;
-        position: relative;
-        overflow: hidden;
-    }
-
-    header img {
-        width: 90px;
-        margin-bottom: 20px;
-        filter: drop-shadow(2px 2px 5px rgba(0,0,0,0.3));
-        animation: logoFade 1s ease forwards;
-    }
-
-    header h1 {
-        font-size: 3em;
-        margin-bottom: 10px;
-        animation: slideDown 1s ease forwards;
-    }
-
-    header p {
-        font-size: 1.3em;
-        opacity: 0.9;
-        animation: slideUp 1s ease forwards;
-    }
-
-    @keyframes logoFade { from {opacity:0; transform:scale(0.5);} to {opacity:1; transform:scale(1);} }
-    @keyframes slideDown { from {opacity:0; transform:translateY(-50px);} to {opacity:1; transform:translateY(0);} }
-    @keyframes slideUp { from {opacity:0; transform:translateY(50px);} to {opacity:1; transform:translateY(0);} }
-
-    .container {
-        width: 90%;
-        max-width: 1200px;
-        margin: 50px auto;
-    }
-
-    .plans {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 30px;
-        justify-content: center;
-    }
-
-    .plan {
-        background-color: white;
-        border-radius: 25px;
-        padding: 25px 20px 40px;
-        flex: 1;
-        min-width: 300px;
-        max-width: 380px;
-        text-align: center;
-        box-shadow: 0 6px 15px rgba(0,0,0,0.08);
-        transition: all 0.4s ease, box-shadow 0.4s ease, border 0.4s ease, transform 0.4s ease;
-        position: relative;
-        opacity: 0;
-        transform: translateY(50px);
-        border: 2px solid #064e3b;
-        overflow: hidden;
-    }
-
-    .plan.visible {
-        opacity: 1;
-        transform: translateY(0);
-    }
-
-    .plan:hover {
-        transform: translateY(-10px) scale(1.03);
-        box-shadow: 0 18px 35px rgba(0,0,0,0.2);
-        border: 2px solid #16a34a;
-        background: linear-gradient(to bottom right, #f0fdf4, #e6f7e9);
-    }
-
-    .plan img {
-        width: 80px;
-        margin-bottom: 20px;
-        border-radius: 15px;
-        transition: transform 0.4s ease;
-    }
-
-    .plan img:hover {
-        transform: scale(1.1);
-    }
-
-    .plan h2 {
-        color: #064e3b;
-        margin-bottom: 12px;
-        font-size: 1.5em;
-    }
-
-    .plan p {
-        margin: 10px 0;
-        font-size: 1em;
-        color: #333;
-    }
-
-    .price {
-        font-size: 1.9em;
-        font-weight: bold;
-        margin: 20px 0;
-        color: #16a34a;
-    }
-
-    .btn, .form-btn {
-        background-color: #16a34a;
-        color: white;
-        padding: 14px 28px;
-        text-decoration: none;
-        border-radius: 12px;
-        font-weight: 600;
-        display: inline-block;
-        transition: all 0.4s ease;
-        box-shadow: 0 6px 15px rgba(0,0,0,0.1);
-        margin-top: 10px;
-    }
-
-    .btn:hover, .form-btn:hover {
-        background-color: #065f46;
-        transform: translateY(-3px) scale(1.05);
-        box-shadow: 0 12px 25px rgba(0,0,0,0.3);
-    }
-
-    footer {
-        background-color: #064e3b;
-        color: white;
-        text-align: center;
-        padding: 50px 20px;
-    }
-
-    footer a { color: #a7f3d0; text-decoration: underline; }
-    footer a:hover { color: #d1fae5; }
-
-    .whatsapp-float {
-        position: fixed;
-        width: 60px;
-        height: 60px;
-        bottom: 25px;
-        right: 25px;
-        background-color: #25d366;
-        color: white;
-        border-radius: 50%;
-        text-align: center;
-        font-size: 30px;
-        box-shadow: 2px 2px 12px rgba(0,0,0,0.3);
-        z-index: 100;
-        transition: transform 0.3s ease, box-shadow 0.3s ease;
-    }
-
-    .whatsapp-float:hover {
-        transform: scale(1.15);
-        box-shadow: 0 0 25px rgba(37,211,102,0.8);
-    }
-
-    .whatsapp-float i { margin-top: 15px; }
-
-    @media (max-width: 768px) {
-        .plans { flex-direction: column; align-items: center; }
-        .whatsapp-float { width: 55px; height: 55px; font-size: 26px; bottom: 20px; right: 20px; }
-        .whatsapp-float i { margin-top: 14px; }
-    }
-</style>
-</head>
-<body>
-
 <header>
-    <img src="https://cdn-icons-png.flaticon.com/512/2920/2920277.png" alt="Logo Fotos que Vendem">
-    <h1>Fotos que Vendem</h1>
-    <p>Transforme imagens comuns em poderosas ferramentas de venda.</p>
+    <div style="position:relative; overflow:hidden;">
+        <!-- Background de gradiente -->
+        <div style="position:absolute; top:0; left:0; width:100%; height:100%; background:linear-gradient(135deg,#16a34a,#064e3b); z-index:0;"></div>
+        
+        <!-- Partículas geométricas -->
+        <canvas id="particles" style="position:absolute; width:100%; height:100%; z-index:1;"></canvas>
+        
+        <div style="position:relative; z-index:2; text-align:center; padding:80px 20px;">
+            <img src="https://cdn-icons-png.flaticon.com/512/2921/2921822.png" alt="Câmera Fotos que Vendem" style="width:100px; margin-bottom:20px; filter:drop-shadow(2px 2px 5px rgba(0,0,0,0.3));">
+            <h1 style="font-size:3em; color:white; margin-bottom:15px;">Fotos que Vendem</h1>
+            <p style="font-size:1.5em; color:white; opacity:0.9; margin-bottom:25px;">Transforme suas fotos em vendas reais</p>
+            <a href="#plans" class="btn" style="padding:16px 32px; font-size:1.1em;">Escolha seu plano agora</a>
+        </div>
+    </div>
 </header>
 
-<div class="container">
-    <h2 style="text-align:center; margin-bottom:50px;">Escolha o plano ideal para o seu negócio</h2>
-    <div class="plans">
-
-        <div class="plan">
-            <img src="https://cdn-icons-png.flaticon.com/512/2921/2921822.png" alt="Plano Base">
-            <h2>📸 Fotos que Vendem (Base)</h2>
-            <p>10 melhorias de fotos profissionais</p>
-            <p>Perfeito para quem quer realçar produtos e serviços</p>
-            <div class="price">R$ 99,99</div>
-            <a href="https://link.infinitepay.io/verruck_/VC1DLTAtUg-6bG4T8Q3ot-99,99" class="btn" target="_blank">💳 Contratar Agora</a>
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSf9khrT32bBIPm53u53JIEtj3akJkVNEeumTFdo-lXF1wP3rg/viewform?usp=dialog" class="form-btn" target="_blank">📝 Preencha o Formulário</a>
-        </div>
-
-        <div class="plan">
-            <img src="https://cdn-icons-png.flaticon.com/512/2921/2921826.png" alt="Plano Plus">
-            <h2>📈 Fotos que Vendem Plus</h2>
-            <p>10 melhorias de fotos</p>
-            <p>+ 3 posts prontos para Instagram</p>
-            <p>Mais engajamento e profissionalismo nas redes</p>
-            <div class="price">R$ 159,99</div>
-            <a href="https://link.infinitepay.io/verruck_/VC1DLTAtUg-p9l5t4GbN-159,99" class="btn" target="_blank">💳 Contratar Agora</a>
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSf9khrT32bBIPm53u53JIEtj3akJkVNEeumTFdo-lXF1wP3rg/viewform?usp=dialog" class="form-btn" target="_blank">📝 Preencha o Formulário</a>
-        </div>
-
-        <div class="plan">
-            <img src="https://cdn-icons-png.flaticon.com/512/2921/2921830.png" alt="Plano Pro">
-            <h2>🚀 Fotos que Vendem Pro</h2>
-            <p>10 melhorias de fotos</p>
-            <p>5 posts personalizados</p>
-            <p>1 cardápio digital exclusivo</p>
-            <p>O pacote completo para destacar sua marca</p>
-            <div class="price">R$ 219,99</div>
-            <a href="https://link.infinitepay.io/verruck_/VC1DLTAtUg-6bG4zU3kB9-219,99" class="btn" target="_blank">💳 Contratar Agora</a>
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSf9khrT32bBIPm53u53JIEtj3akJkVNEeumTFdo-lXF1wP3rg/viewform?usp=dialog" class="form-btn" target="_blank">📝 Preencha o Formulário</a>
-        </div>
-
-    </div>
-</div>
-
-<footer>
-    <p>💬 Dúvidas ou pedidos personalizados? Fale conosco!</p>
-    <p>WhatsApp: <a href="https://wa.me/5554984493856?text=Olá,%20quero%20saber%20mais%20sobre%20os%20planos!" target="_blank">(54) 98449-3856</a></p>
-    <p>© 2025 Fotos que Vendem — Todos os direitos reservados.</p>
-</footer>
-
-<a href="https://wa.me/5554984493856?text=Olá,%20quero%20saber%20mais%20sobre%20os%20planos%20do%20site!" class="whatsapp-float" target="_blank">
-    <i class="fab fa-whatsapp"></i>
-</a>
-
 <script>
-    const planos = document.querySelectorAll('.plan');
-    const observer = new IntersectionObserver(entries => {
-        entries.forEach(entry => {
-            if(entry.isIntersecting){
-                entry.target.classList.add('visible');
-            }
-        });
-    }, { threshold: 0.2 });
-    planos.forEach(plan => observer.observe(plan));
-</script>
+    // Partículas leves
+    const canvas = document.getElementById('particles');
+    const ctx = canvas.getContext('2d');
+    canvas.width = window.innerWidth;
+    canvas.height = 400; // altura do header
 
-</body>
-</html>
+    const particles = [];
+    for(let i=0;i<50;i++){
+        particles.push({
+            x: Math.random()*canvas.width,
+            y: Math.random()*canvas.height,
+            radius: Math.random()*3+1,
+            dx: (Math.random()-0.5)*1,
+            dy: (Math.random()-0.5)*1
+        });
+    }
+
+    function animate(){
+        ctx.clearRect(0,0,canvas.width,canvas.height);
+        particles.forEach(p=>{
+            ctx.beginPath();
+            ctx.arc(p.x,p.y,p.radius,0,Math.PI*2);
+            ctx.fillStyle='rgba(255,255,255,0.6)';
+            ctx.fill();
+            p.x += p.dx;
+            p.y += p.dy;
+            if(p.x>canvas.width)p.x=0;
+            if(p.x<0)p.x=canvas.width;
+            if(p.y>canvas.height)p.y=0;
+            if(p.y<0)p.y=canvas.height;
+        });
+        requestAnimationFrame(animate);
+    }
+    animate();
+</script>
