--- a/index.html
+++ b/index.html
@@ -228,6 +228,7 @@ footer a:hover { color: #d1fae5; }
     <h2 style="text-align:center; margin-bottom:50px;">Escolha o plano ideal para o seu negócio</h2>
     <div class="plans">
 
+        <!-- Plano Base -->
         <div class="plan">
             <img src="https://cdn-icons-png.flaticon.com/512/2921/2921822.png" alt="Plano Base">
             <h2>📸 Fotos que Vendem (Base)</h2>
@@ -238,7 +239,9 @@ footer a:hover { color: #d1fae5; }
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSf9khrT32bBIPm53u53JIEtj3akJkVNEeumTFdo-lXF1wP3rg/viewform?usp=dialog" class="form-btn" target="_blank">📝 Preencha o Formulário</a>
         </div>
 
+        <!-- Plano Plus (Mais Vendido) -->
         <div class="plan">
+            <div style="position:absolute; top:15px; right:15px; background-color:#16a34a; color:white; font-weight:700; padding:6px 12px; border-radius:12px; font-size:0.9em; box-shadow:0 4px 10px rgba(0,0,0,0.2);">Mais Vendido</div>
             <img src="https://cdn-icons-png.flaticon.com/512/2921/2921826.png" alt="Plano Plus">
             <h2>📈 Fotos que Vendem Plus</h2>
             <p>10 melhorias de fotos</p>
@@ -249,6 +252,7 @@ footer a:hover { color: #d1fae5; }
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSf9khrT32bBIPm53u53JIEtj3akJkVNEeumTFdo-lXF1wP3rg/viewform?usp=dialog" class="form-btn" target="_blank">📝 Preencha o Formulário</a>
         </div>
 
+        <!-- Plano Pro -->
         <div class="plan">
             <img src="https://cdn-icons-png.flaticon.com/512/2921/2921830.png" alt="Plano Pro">
             <h2>🚀 Fotos que Vendem Pro</h2>
