--- a/index.html
+++ b/index.html
@@ -8,229 +8,200 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 <style>
-body {
-    font-family: "Poppins", Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f0fdf4;
-    color: #111;
-    scroll-behavior: smooth;
-}
+    body {
+        font-family: "Poppins", Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        background-color: #f0fdf4;
+        color: #111;
+        scroll-behavior: smooth;
+    }
 
-/* HEADER */
-header {
-    position: relative;
-    height: 400px;
-    overflow: hidden;
-}
+    header {
+        background: linear-gradient(135deg,#16a34a,#064e3b);
+        color: white;
+        text-align: center;
+        padding: 60px 20px;
+        position: relative;
+        overflow: hidden;
+    }
 
-header .header-content {
-    position: relative;
-    z-index: 2;
-    text-align: center;
-    padding: 80px 20px;
-}
+    header img {
+        width: 90px;
+        margin-bottom: 20px;
+        filter: drop-shadow(2px 2px 5px rgba(0,0,0,0.3));
+        animation: logoFade 1s ease forwards;
+    }
 
-header img {
-    width: 100px;
-    margin-bottom: 20px;
-    filter: drop-shadow(2px 2px 5px rgba(0,0,0,0.3));
-}
+    header h1 {
+        font-size: 3em;
+        margin-bottom: 10px;
+        animation: slideDown 1s ease forwards;
+    }
 
-header h1 {
-    font-size: 3em;
-    color: white;
-    margin-bottom: 15px;
-}
+    header p {
+        font-size: 1.3em;
+        opacity: 0.9;
+        animation: slideUp 1s ease forwards;
+    }
 
-header p {
-    font-size: 1.5em;
-    color: white;
-    opacity: 0.9;
-    margin-bottom: 25px;
-}
+    @keyframes logoFade { from {opacity:0; transform:scale(0.5);} to {opacity:1; transform:scale(1);} }
+    @keyframes slideDown { from {opacity:0; transform:translateY(-50px);} to {opacity:1; transform:translateY(0);} }
+    @keyframes slideUp { from {opacity:0; transform:translateY(50px);} to {opacity:1; transform:translateY(0);} }
 
-header .btn-header {
-    padding: 16px 32px;
-    font-size: 1.1em;
-    background-color: #16a34a;
-    color: white;
-    border-radius: 12px;
-    text-decoration: none;
-    font-weight: 600;
-    box-shadow: 0 6px 15px rgba(0,0,0,0.1);
-    transition: all 0.4s ease;
-}
+    .container {
+        width: 90%;
+        max-width: 1200px;
+        margin: 50px auto;
+    }
 
-header .btn-header:hover {
-    background-color: #065f46;
-    transform: translateY(-3px) scale(1.05);
-    box-shadow: 0 12px 25px rgba(0,0,0,0.3);
-}
+    .plans {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 30px;
+        justify-content: center;
+    }
 
-canvas#particles {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top:0;
-    left:0;
-    z-index:1;
-}
+    .plan {
+        background-color: white;
+        border-radius: 25px;
+        padding: 35px 25px;
+        flex: 1;
+        min-width: 300px;
+        max-width: 380px;
+        text-align: center;
+        box-shadow: 0 6px 15px rgba(0,0,0,0.08);
+        transition: all 0.4s ease, box-shadow 0.4s ease, border 0.4s ease;
+        position: relative;
+        opacity: 0;
+        transform: translateY(50px);
+        border: 2px solid #064e3b;
+    }
 
-/* PLANS */
-.container {
-    width: 90%;
-    max-width: 1200px;
-    margin: 50px auto;
-}
+    .plan.visible {
+        opacity: 1;
+        transform: translateY(0);
+    }
 
-.plans {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 30px;
-    justify-content: center;
-}
+    .plan:hover {
+        transform: translateY(-10px) scale(1.03);
+        box-shadow: 0 18px 35px rgba(0,0,0,0.2);
+        border: 2px solid #16a34a;
+        background: linear-gradient(to bottom right, #f0fdf4, #e6f7e9);
+    }
 
-.plan {
-    background-color: white;
-    border-radius: 25px;
-    padding: 25px 20px 40px;
-    flex: 1;
-    min-width: 300px;
-    max-width: 380px;
-    text-align: center;
-    box-shadow: 0 6px 15px rgba(0,0,0,0.08);
-    transition: all 0.4s ease, box-shadow 0.4s ease, border 0.4s ease, transform 0.4s ease;
-    position: relative;
-    opacity: 0;
-    transform: translateY(50px);
-    border: 2px solid #064e3b;
-    overflow: hidden;
-}
+    .plan h2 {
+        color: #064e3b;
+        margin-bottom: 12px;
+        font-size: 1.5em;
+    }
 
-.plan.visible {
-    opacity: 1;
-    transform: translateY(0);
-}
+    .plan p {
+        margin: 10px 0;
+        font-size: 1em;
+        color: #333;
+    }
 
-.plan:hover {
-    transform: translateY(-10px) scale(1.03);
-    box-shadow: 0 18px 35px rgba(0,0,0,0.2);
-    border: 2px solid #16a34a;
-    background: linear-gradient(to bottom right, #f0fdf4, #e6f7e9);
-}
+    .price {
+        font-size: 1.9em;
+        font-weight: bold;
+        margin: 25px 0;
+        color: #16a34a;
+    }
 
-.plan img {
-    width: 80px;
-    margin-bottom: 20px;
-    border-radius: 15px;
-    transition: transform 0.4s ease;
-}
+    .btn, .form-btn {
+        background-color: #16a34a;
+        color: white;
+        padding: 14px 28px;
+        text-decoration: none;
+        border-radius: 12px;
+        font-weight: 600;
+        display: inline-block;
+        transition: all 0.4s ease;
+        box-shadow: 0 6px 15px rgba(0,0,0,0.1);
+        margin-top: 10px;
+    }
 
-.plan img:hover {
-    transform: scale(1.1);
-}
+    .btn:hover, .form-btn:hover {
+        background-color: #065f46;
+        transform: translateY(-3px) scale(1.05);
+        box-shadow: 0 12px 25px rgba(0,0,0,0.3);
+    }
 
-.plan h2 {
-    color: #064e3b;
-    margin-bottom: 12px;
-    font-size: 1.5em;
-}
+    .success-message {
+        display: none;
+        background-color: #dcfce7;
+        border: 2px solid #16a34a;
+        color: #065f46;
+        padding: 15px;
+        border-radius: 10px;
+        font-weight: bold;
+        position: absolute;
+        top: 10px;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 80%;
+        text-align: center;
+        box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+        animation: fadeIn 0.5s ease-in-out;
+    }
 
-.plan p {
-    margin: 10px 0;
-    font-size: 1em;
-    color: #333;
-}
+    @keyframes fadeIn { from {opacity:0;} to {opacity:1;} }
 
-.price {
-    font-size: 1.9em;
-    font-weight: bold;
-    margin: 20px 0;
-    color: #16a34a;
-}
+    footer {
+        background-color: #064e3b;
+        color: white;
+        text-align: center;
+        padding: 50px 20px;
+    }
 
-.btn, .form-btn {
-    background-color: #16a34a;
-    color: white;
-    padding: 14px 28px;
-    text-decoration: none;
-    border-radius: 12px;
-    font-weight: 600;
-    display: inline-block;
-    transition: all 0.4s ease;
-    box-shadow: 0 6px 15px rgba(0,0,0,0.1);
-    margin-top: 10px;
-}
+    footer a { color: #a7f3d0; text-decoration: underline; }
+    footer a:hover { color: #d1fae5; }
 
-.btn:hover, .form-btn:hover {
-    background-color: #065f46;
-    transform: translateY(-3px) scale(1.05);
-    box-shadow: 0 12px 25px rgba(0,0,0,0.3);
-}
+    .whatsapp-float {
+        position: fixed;
+        width: 60px;
+        height: 60px;
+        bottom: 25px;
+        right: 25px;
+        background-color: #25d366;
+        color: white;
+        border-radius: 50%;
+        text-align: center;
+        font-size: 30px;
+        box-shadow: 2px 2px 12px rgba(0,0,0,0.3);
+        z-index: 100;
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
 
-/* FOOTER */
-footer {
-    background-color: #064e3b;
-    color: white;
-    text-align: center;
-    padding: 50px 20px;
-}
+    .whatsapp-float:hover {
+        transform: scale(1.15);
+        box-shadow: 0 0 25px rgba(37,211,102,0.8);
+    }
 
-footer a { color: #a7f3d0; text-decoration: underline; }
-footer a:hover { color: #d1fae5; }
+    .whatsapp-float i { margin-top: 15px; }
 
-.whatsapp-float {
-    position: fixed;
-    width: 60px;
-    height: 60px;
-    bottom: 25px;
-    right: 25px;
-    background-color: #25d366;
-    color: white;
-    border-radius: 50%;
-    text-align: center;
-    font-size: 30px;
-    box-shadow: 2px 2px 12px rgba(0,0,0,0.3);
-    z-index: 100;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-
-.whatsapp-float:hover {
-    transform: scale(1.15);
-    box-shadow: 0 0 25px rgba(37,211,102,0.8);
-}
-
-.whatsapp-float i { margin-top: 15px; }
-
-@media (max-width: 768px) {
-    .plans { flex-direction: column; align-items: center; }
-    .whatsapp-float { width: 55px; height: 55px; font-size: 26px; bottom: 20px; right: 20px; }
-    .whatsapp-float i { margin-top: 14px; }
-}
+    @media (max-width: 768px) {
+        .plans { flex-direction: column; align-items: center; }
+        .whatsapp-float { width: 55px; height: 55px; font-size: 26px; bottom: 20px; right: 20px; }
+        .whatsapp-float i { margin-top: 14px; }
+    }
 </style>
 </head>
 <body>
 
-<!-- HEADER -->
 <header>
-    <canvas id="particles"></canvas>
-    <div class="header-content">
-        <img src="https://cdn-icons-png.flaticon.com/512/2921/2921822.png" alt="Câmera Fotos que Vendem">
-        <h1>Fotos que Vendem</h1>
-        <p>Transforme suas fotos em vendas reais</p>
-        <a href="#plans" class="btn-header">Escolha seu plano agora</a>
-    </div>
+    <img src="https://cdn-icons-png.flaticon.com/512/2920/2920277.png" alt="Logo Fotos que Vendem">
+    <h1>Fotos que Vendem</h1>
+    <p>Transforme imagens comuns em poderosas ferramentas de venda.</p>
 </header>
 
-<!-- PLANS -->
-<div class="container" id="plans">
+<div class="container">
     <h2 style="text-align:center; margin-bottom:50px;">Escolha o plano ideal para o seu negócio</h2>
     <div class="plans">
 
         <!-- Plano Base -->
         <div class="plan">
-            <img src="https://cdn-icons-png.flaticon.com/512/2921/2921822.png" alt="Plano Base">
             <h2>📸 Fotos que Vendem (Base)</h2>
             <p>10 melhorias de fotos profissionais</p>
             <p>Perfeito para quem quer realçar produtos e serviços</p>
@@ -241,8 +212,9 @@ footer a:hover { color: #d1fae5; }
 
         <!-- Plano Plus (Mais Vendido) -->
         <div class="plan">
-            <div style="position:absolute; top:15px; right:15px; background-color:#16a34a; color:white; font-weight:700; padding:6px 12px; border-radius:12px; font-size:0.9em; box-shadow:0 4px 10px rgba(0,0,0,0.2);">Mais Vendido</div>
-            <img src="https://cdn-icons-png.flaticon.com/512/2921/2921826.png" alt="Plano Plus">
+            <div style="position:absolute; top:15px; right:15px; background-color:#16a34a; color:white; font-weight:700; padding:6px 12px; border-radius:12px; font-size:0.9em; box-shadow:0 4px 10px rgba(0,0,0,0.2);">
+                Mais Vendido
+            </div>
             <h2>📈 Fotos que Vendem Plus</h2>
             <p>10 melhorias de fotos</p>
             <p>+ 3 posts prontos para Instagram</p>
@@ -254,7 +226,6 @@ footer a:hover { color: #d1fae5; }
 
         <!-- Plano Pro -->
         <div class="plan">
-            <img src="https://cdn-icons-png.flaticon.com/512/2921/2921830.png" alt="Plano Pro">
             <h2>🚀 Fotos que Vendem Pro</h2>
             <p>10 melhorias de fotos</p>
             <p>5 posts personalizados</p>
@@ -268,7 +239,6 @@ footer a:hover { color: #d1fae5; }
     </div>
 </div>
 
-<!-- FOOTER -->
 <footer>
     <p>💬 Dúvidas ou pedidos personalizados? Fale conosco!</p>
     <p>WhatsApp: <a href="https://wa.me/5554984493856?text=Olá,%20quero%20saber%20mais%20sobre%20os%20planos!" target="_blank">(54) 98449-3856</a></p>
@@ -280,40 +250,6 @@ footer a:hover { color: #d1fae5; }
 </a>
 
 <script>
-    // Animação partículas header
-    const canvas = document.getElementById('particles');
-    const ctx = canvas.getContext('2d');
-    canvas.width = window.innerWidth;
-    canvas.height = 400;
-    const particles = [];
-    for(let i=0;i<50;i++){
-        particles.push({
-            x: Math.random()*canvas.width,
-            y: Math.random()*canvas.height,
-            radius: Math.random()*3+1,
-            dx: (Math.random()-0.5)*1,
-            dy: (Math.random()-0.5)*1
-        });
-    }
-    function animateParticles(){
-        ctx.clearRect(0,0,canvas.width,canvas.height);
-        particles.forEach(p=>{
-            ctx.beginPath();
-            ctx.arc(p.x,p.y,p.radius,0,Math.PI*2);
-            ctx.fillStyle='rgba(255,255,255,0.6)';
-            ctx.fill();
-            p.x += p.dx;
-            p.y += p.dy;
-            if(p.x>canvas.width)p.x=0;
-            if(p.x<0)p.x=canvas.width;
-            if(p.y>canvas.height)p.y=0;
-            if(p.y<0)p.y=canvas.height;
-        });
-        requestAnimationFrame(animateParticles);
-    }
-    animateParticles();
-
-    // Animação planos
     const planos = document.querySelectorAll('.plan');
     const observer = new IntersectionObserver(entries => {
         entries.forEach(entry => {
