--- a/index.html
+++ b/index.html
@@ -105,8 +105,14 @@
     .price {
         font-size: 1.9em;
         font-weight: bold;
-        margin: 25px 0;
+        margin: 15px 0 5px;
         color: #16a34a;
+    }
+
+    .price-note {
+        font-size: 0.9em;
+        color: #555;
+        margin-bottom: 20px;
     }
 
     .btn, .form-btn {
@@ -127,26 +133,6 @@
         transform: translateY(-3px) scale(1.05);
         box-shadow: 0 12px 25px rgba(0,0,0,0.3);
     }
-
-    .success-message {
-        display: none;
-        background-color: #dcfce7;
-        border: 2px solid #16a34a;
-        color: #065f46;
-        padding: 15px;
-        border-radius: 10px;
-        font-weight: bold;
-        position: absolute;
-        top: 10px;
-        left: 50%;
-        transform: translateX(-50%);
-        width: 80%;
-        text-align: center;
-        box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-        animation: fadeIn 0.5s ease-in-out;
-    }
-
-    @keyframes fadeIn { from {opacity:0;} to {opacity:1;} }
 
     footer {
         background-color: #064e3b;
@@ -206,7 +192,8 @@
             <p>10 melhorias de fotos profissionais</p>
             <p>Perfeito para quem quer realçar produtos e serviços</p>
             <div class="price">R$ 99,99</div>
-            <a href="https://link.infinitepay.io/verruck_/VC1DLTAtUg-6bG4T8Q3ot-99,99" class="btn" target="_blank">💳 Contratar Agora</a>
+            <div class="price-note">Valor já inclui a taxa da maquininha</div>
+            <a href="https://link.infinitepay.io/verruck_/VC1DLTAtUg-6bGquXwZLz-94,00" class="btn" target="_blank">💳 Contratar Agora</a>
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSf9khrT32bBIPm53u53JIEtj3akJkVNEeumTFdo-lXF1wP3rg/viewform?usp=dialog" class="form-btn" target="_blank">📝 Preencha o Formulário</a>
         </div>
 
@@ -220,46 +207,6 @@
             <p>+ 3 posts prontos para Instagram</p>
             <p>Mais engajamento e profissionalismo nas redes</p>
             <div class="price">R$ 159,99</div>
-            <a href="https://link.infinitepay.io/verruck_/VC1DLTAtUg-p9l5t4GbN-159,99" class="btn" target="_blank">💳 Contratar Agora</a>
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSf9khrT32bBIPm53u53JIEtj3akJkVNEeumTFdo-lXF1wP3rg/viewform?usp=dialog" class="form-btn" target="_blank">📝 Preencha o Formulário</a>
-        </div>
-
-        <!-- Plano Pro -->
-        <div class="plan">
-            <h2>🚀 Fotos que Vendem Pro</h2>
-            <p>10 melhorias de fotos</p>
-            <p>5 posts personalizados</p>
-            <p>1 cardápio digital exclusivo</p>
-            <p>O pacote completo para destacar sua marca</p>
-            <div class="price">R$ 219,99</div>
-            <a href="https://link.infinitepay.io/verruck_/VC1DLTAtUg-6bG4zU3kB9-219,99" class="btn" target="_blank">💳 Contratar Agora</a>
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSf9khrT32bBIPm53u53JIEtj3akJkVNEeumTFdo-lXF1wP3rg/viewform?usp=dialog" class="form-btn" target="_blank">📝 Preencha o Formulário</a>
-        </div>
-
-    </div>
-</div>
-
-<footer>
-    <p>💬 Dúvidas ou pedidos personalizados? Fale conosco!</p>
-    <p>WhatsApp: <a href="https://wa.me/5554984493856?text=Olá,%20quero%20saber%20mais%20sobre%20os%20planos!" target="_blank">(54) 98449-3856</a></p>
-    <p>© 2025 Fotos que Vendem — Todos os direitos reservados.</p>
-</footer>
-
-<a href="https://wa.me/5554984493856?text=Olá,%20quero%20saber%20mais%20sobre%20os%20planos%20do%20site!" class="whatsapp-float" target="_blank">
-    <i class="fab fa-whatsapp"></i>
-</a>
-
-<script>
-    const planos = document.querySelectorAll('.plan');
-    const observer = new IntersectionObserver(entries => {
-        entries.forEach(entry => {
-            if(entry.isIntersecting){
-                entry.target.classList.add('visible');
-            }
-        });
-    }, { threshold: 0.2 });
-    planos.forEach(plan => observer.observe(plan));
-</script>
-
-</body>
-</html>
+            <div class="price-note">Valor já inclui a taxa da maquininha</div>
+            <a href="https://link.infinitepay.io/verruck_/VC1DLTAtUg-6OTw0kZ85-150,40" class="btn" target="_blank">💳 Contratar Agora</a>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSf9khrT32bBIPm53u53JIEtj3akJkVNEeumTFdo-lXF1wP3rg/viewform?usp=dialog" class="form-btn" target="_blank">
